# D-Vision-3D-reconstructure

./: .env.example  .gitignore  LICENSE  Procfile  README.md  generate_docs.py  pyproject.toml
app/: config.py  database.py  main.py
app/models/: __init__.py  event.py  job.py  photo.py  window.py
app/routers/: events.py  jobs.py  photos.py  viewer.py  ws.py
app/services/: storage.py  upload.py  windowing.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/viewer/: LoadingOverlay.tsx  SplatViewer.tsx  TimelineScrubber.tsx
frontend/src/hooks/: useJobWebSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: EventDetail.tsx  EventList.tsx  UploadFlow.tsx  Viewer.tsx
frontend/src/store/: viewerStore.ts
pipeline/: 00_env_check.py  01_colmap_test.py  02_opensplat_test.py  03_sam2_test.py
tests/: test_api.py
worker/: pipeline.py  progress.py  settings.py
worker/stages/: colmap.py  export.py  opensplat.py  sam2.py
