[project]
name = "d-vision-3d-reconstructure"
version = "0.1.0"
description = "Crowd-sourced event photo → 3D Gaussian Splatting scene with timeline scrubber"
authors = [{ name = "Dana Khaing" }]
requires-python = ">=3.10"

dependencies = [
    # ── API ──────────────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "pydantic-settings>=2.0.0",

    # ── Database ──────────────────────────────────────────────────────────────
    "sqlmodel>=0.0.21",
    "alembic>=1.13.0",
    "aiosqlite>=0.20.0",

    # ── Job Queue ─────────────────────────────────────────────────────────────
    "arq>=0.26.0",
    "redis[asyncio]>=5.0.0",

    # ── Image / EXIF ──────────────────────────────────────────────────────────
    "Pillow>=10.0.0",
    "piexif>=1.1.3",
    "exifread>=3.0.0",
    "imagehash>=4.3.1",
    "opencv-python-headless>=4.8.0",

    # ── Utilities ─────────────────────────────────────────────────────────────
    "tqdm>=4.66.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ml = [
    # Install these separately — large, Apple Silicon specific
    # torch>=2.2.0  (install via: pip install torch torchvision)
    # pycolmap>=0.6.0
    # ultralytics  (YOLOv8)
    # open3d>=0.18.0
    "numpy>=1.24.0,<2.0.0",
    "scipy>=1.11.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
